# agent-orchestrator

./: .env.example  .env.example.advanced  .flake8  .gitignore  AGENTS.md  README.md  pyproject.toml  run.sh
.github/: dependabot.yml
analytics-db/: .env.example  compose.yml
docs/: architecture.md  configuration.md  observability.md  security.md  state-machine.md  workflow.md
orchestrator/: __init__.py  __init__.pyi  __main__.py  _agent_api.py  _agent_claude.py  _agent_claude_messages.py  _agent_codex.py  _agent_config.py  _agent_environment.py  _agent_process_registry.py  _agent_runner_common.py  _agent_session.py  _base_sync_eligibility.py  _base_sync_export_manifest.py  _base_sync_exports.py  _base_sync_models.py  _base_sync_pr.py  _base_sync_pre_pr.py  _base_sync_publish.py  _base_sync_publish_guards.py  _base_sync_recovery.py  _base_sync_recovery_decisions.py  _base_sync_recovery_persistence.py  _base_sync_recovery_snapshot.py  _base_sync_refresh.py  _base_sync_start.py  _base_sync_state.py  _branch_probes.py  _branch_publication_export_manifest.py  _branch_publication_exports.py  _branch_publication_flow.py  _branch_publication_state.py  _branch_squash_plan.py  _branch_squash_rewrite.py  _compat_exports.py  _dashboard_adoption_columns.py  _dashboard_adoption_headers.py  _dashboard_adoption_render.py  _dashboard_adoption_rows.py  _dashboard_adoption_sort.py  (+236 more)
plans/: analytics-sync-performance.md  article-review-claude-code.md  dashboard-load-optimization.md  domain-package-refactor.md  features-proposal.md  linter-remediation-phase-2.md  linter-remediation.md  reharness-ideas.md  review-stages-lifecycle.md  roadmap.md  skill-trigger-tracking.md  symphony-spec-review.md  test-coverage-audit.md  token-usage-in-trajectories.md  tracked-repos-awareness.md
tests/: __init__.py  agent_test_support.py  agent_test_values.py  (+521 more)
(+230 files in other folders)
