# Copyright 2026 Geser Dugarov
# SPDX-License-Identifier: Apache-2.0
[project]
name = "agent-orchestrator"
version = "0.7.0"
description = "GitHub-Issue-driven AI agent workflow."
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = ["PyGithub>=2.1", "psycopg[binary]>=3.3.4"]

[dependency-groups]
dev = ["pytest>=9.1.0", "ruff>=0.15.16", "wemake-python-styleguide>=1.6.2"]
# Streamlit, Plotly, and Streamlit's transitive pandas are only needed
# by the analytics dashboard (`orchestrator/dashboard.py`, the chart
# builders in `orchestrator/dashboard_charts.py`, and the theme tokens
# in `orchestrator/dashboard_theme.py`). They are deliberately NOT in
# the default `dev` group so `uv sync --locked` keeps installing the
# orchestrator's runtime + tests minimal; install with
# `uv sync --group dashboard` before running `streamlit run`.
dashboard = ["streamlit>=1.36", "plotly>=6.8.0"]

[tool.pytest.ini_options]
# Surface skip reasons in the run summary by default. The suite carries
# two intentional skip families -- the optional Plotly dashboard chart
# tests and the opt-in live-Postgres analytics integration class -- and
# under the default `pytest` invocation they collapse to a bare "N skipped"
# line that hides their `_SKIP_REASON` / `SkipTest` messages.
addopts = ["-rs"]

[tool.ruff]
# Repository-wide line-length target. Ruff enforces it for Python (E501,
# enabled below); `tests/test_line_length.py` reads this same value to
# enforce it for tracked Markdown/text files, so 120 lives in one place.
line-length = 120

[tool.ruff.lint]
# E501 (line too long) is not in Ruff's default rule set; opt into it so
# the line-length target above is actually enforced.
extend-select = ["E501"]
